--- a/installer/InstallWizard.ui
+++ b/installer/InstallWizard.ui
@@ -25,7 +25,7 @@
   </property>
   <widget class="QWizardPage" name="welcomePage">
    <property name="title">
-    <string>Dancing Mad Pre-Alpha Installer</string>
+    <string>Dancing Mad Final Beta Installer</string>
    </property>
    <property name="subTitle">
     <string>Welcome</string>
@@ -52,7 +52,7 @@
   </widget>
   <widget class="licensePage" name="licensePage">
    <property name="title">
-    <string>Dancing Mad Pre-Alpha Installer</string>
+    <string>Dancing Mad Final Beta Installer</string>
    </property>
    <property name="subTitle">
     <string>License Agreement</string>
@@ -107,7 +107,7 @@ Acceptance is necessary to complete installation.</string>
   </widget>
   <widget class="readmePage" name="readmePage">
    <property name="title">
-    <string>Dancing Mad Pre-Alpha Installer</string>
+    <string>Dancing Mad Final Beta Installer</string>
    </property>
    <property name="subTitle">
     <string>Readme</string>
@@ -129,7 +129,7 @@ Acceptance is necessary to complete installation.</string>
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt;&quot;&gt;Welcome to Dancing Mad, the music replacement mod for FFVI. &lt;br /&gt;&lt;br /&gt;Readme for Pre-Alpha 1, Dated 5/29/15&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:600;&quot;&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:11pt; font-weight:600;&quot;&gt;Contents&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt;&quot;&gt;Welcome to Dancing Mad, the music replacement mod for FFVI. &lt;br /&gt;&lt;br /&gt;Readme for Final Beta 1, Dated 5/29/15&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:600;&quot;&gt;&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:11pt; font-weight:600;&quot;&gt;Contents&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:600;&quot;&gt;1&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt;&quot;&gt;. Requirements&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:600;&quot;&gt;2&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt;&quot;&gt;. Music&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:600;&quot;&gt;3&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt;&quot;&gt;. Installation&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:600;&quot;&gt;4&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt;&quot;&gt;. Custom Track Selection&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:600;&quot;&gt;5&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt;&quot;&gt;. Higan Post-Installation&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:600;&quot;&gt;6&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt;&quot;&gt;. Running the Game&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:600;&quot;&gt;7&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt;&quot;&gt;. Known Bugs&lt;br /&gt;&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt; font-weight:600;&quot;&gt;8&lt;/span&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:9pt;&quot;&gt;. Tester Information&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot;-qt-paragraph-type:empty; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Sans Serif'; font-size:9pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Sans Serif'; font-size:11pt; font-weight:600;&quot;&gt;1. Requirements&lt;/span&gt;&lt;/p&gt;
@@ -173,7 +173,7 @@ p, li { white-space: pre-wrap; }
   </widget>
   <widget class="destinationPage" name="destinationPage">
    <property name="title">
-    <string>Dancing Mad Pre-Alpha Installer</string>
+    <string>Dancing Mad Final Beta Installer</string>
    </property>
    <property name="subTitle">
     <string>Select Destination Directory...</string>
@@ -282,7 +282,7 @@ p, li { white-space: pre-wrap; }
   </widget>
   <widget class="installtypePage" name="installtypePage">
    <property name="title">
-    <string>Dancing Mad Pre-Alpha Installer</string>
+    <string>Dancing Mad Final Beta Installer</string>
    </property>
    <property name="subTitle">
     <string>Select Install Type</string>
@@ -438,7 +438,7 @@ p, li { white-space: pre-wrap; }
      <item row="1" column="0">
       <widget class="QCheckBox" name="twueCheck">
        <property name="text">
-        <string>Ted Woolsey Uncensored Edition 1.98</string>
+        <string>Ted Woolsey Uncensored Edition 2.00</string>
        </property>
       </widget>
      </item>
@@ -461,7 +461,7 @@ p, li { white-space: pre-wrap; }
   </widget>
   <widget class="customselectionPage" name="customselectionPage">
    <property name="title">
-    <string>Dancing Mad Pre-Alpha Installer</string>
+    <string>Dancing Mad Final Beta Installer</string>
    </property>
    <property name="subTitle">
     <string>Custom Track Selection</string>
@@ -553,7 +553,7 @@ p, li { white-space: pre-wrap; }
   </widget>
   <widget class="downloadPage" name="downloadPage">
    <property name="title">
-    <string>Dancing Mad Pre-Alpha Installer</string>
+    <string>Dancing Mad Final Beta Installer</string>
    </property>
    <property name="subTitle">
     <string>Downloading, Patching, and Installing...</string>
@@ -619,7 +619,7 @@ p, li { white-space: pre-wrap; }
   </widget>
   <widget class="finalPage" name="finalPage">
    <property name="title">
-    <string>Dancing Mad Pre-Alpha Installer</string>
+    <string>Dancing Mad Final Beta Installer</string>
    </property>
    <property name="subTitle">
     <string>Final Notes...</string>
