Skeleton code for Opera selection, installer fixes.
Skeleton code for Opera selection is now in place.

A number of fixes/workarounds are also present:
 * Fixes an issue with a crash during rom patching, caused by accidentally using CurrentBar when I should have used CurrentLabel
 * Works around an issue (#83) where the installer would appear to freeze due to spending time checking the up status of mirrors. Workaround is to set a 4 second timeout.
 * Fixed an issue where labels wouldn't update for the installer's progress re: downloading/patching unless the installer was not in the timer function.
 * Fixed an issue where the install packager was producing unrunnable exes on 3.6 due to missing qt.conf
 * Identified but failed to fix an issue with high DPI display scaling.

--- a/installer/InstallWizard.ui
+++ b/installer/InstallWizard.ui
@@ -551,7 +551,7 @@ p, li { white-space: pre-wrap; }
     </layout>
    </widget>
   </widget>
-  <widget class="QWizardPage" name="wizardPage">
+  <widget class="operaPage" name="operaPage">
    <property name="title">
     <string>Dancing Mad Final Beta Installer</string>
    </property>
@@ -563,7 +563,7 @@ p, li { white-space: pre-wrap; }
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>301</width>
+      <width>366</width>
       <height>212</height>
      </rect>
     </property>
@@ -864,6 +864,12 @@ p, li { white-space: pre-wrap; }
    <class>selectionTableWidget</class>
    <extends>QWidget</extends>
    <header>selectiontablewidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>operaPage</class>
+   <extends>QWizardPage</extends>
+   <header>operapage.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
